# nus-ASS-resource-service

./: .gitignore  Dockerfile  README.md  example.env  pyproject.toml  resource-service-update-endpoints.md
.github/scripts/: render-security-report.py  render-test-report.py
.github/workflows/: cd.yaml  ci.yaml
app/: auth.py  config.py  main.py  models.py  mongo_client.py  repository.py  secrets_loader.py  valkey_client.py
docs/: frontend-auth-integration.md  github-actions-env.md
docs-local/: SERVICE_IMPLEMENTATION_AND_MONGODB_SCHEMA.md  auth-api-integration.md
tests/: conftest.py  test_auth_and_resources.py  test_config.py  test_repository.py  test_secrets_loader.py  test_storage_clients.py
